[package]
name = "baralestir"
version = "0.1.0"
authors = ["András Németh <sunarch@protonmail.com>"]
edition = "2021"
description = "a Rust game with trains"
documentation = "https://docs.rs/baralestir"
readme = "README.md"
homepage = "https://codeberg.org/sunarch/baralestir"
repository = "https://codeberg.org/sunarch/baralestir"
license = "MPL-2.0"
keywords = [
    "baralestir",
    "game",
    "train",
    "trains"
]
categories = [
    "games",
    "simulation"
]
exclude = [".idea/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "baralestir"
path = "src/lib.rs"

[dependencies]
fyrox = "0.30.0"
