# -*- coding: utf-8, vim: expandtab:ts=4 -*-

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = "0.30.0"
baralestir = { path = "../game" }
